--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -24,6 +24,10 @@
   <div class="field">
     <%= form.label :name %>
     <%= form.text_field:name %>
+  </div
+  <div class="field">
+    <%= form.label :old %>
+    <%= form.text_field:old %>
   </div>
 
   <div class="actions">
