--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -13,6 +13,10 @@
   <strong>Name:</strong>
   <%= @message.name %>
 </p>
+<p>
+  <strong>Old:</strong>
+  <%= @message.old %>
+</p>
 
 <%= link_to 'Edit', edit_message_path(@message) %> |
 <%= link_to 'Back', messages_path %>
